--- a/app.json
+++ b/app.json
@@ -1,53 +1,25 @@
 {
-    "name": "Itachi-Uchiha-Md",
-    "description": "A WhatsApp bot based on Baileysjs with Multi-Device support",
-    "repository": "https://github.com/DeeCeeXxx/Itachi_Uchiha-Md",
-    "logo": "https://i.imgur.com/FCIPs29.jpeg",
-    "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
-      "env": {
-       "OWNER_NAME": {
-      "description": "Put Owner Name Here"
-    },
-        "OWNER_NUMBER": {
-      "description": "Put your number here"
-    },
-         "BOTNAME": {
-      "description": "Name of your bot. Ex: - Itachi Uchiha"
-    },
-     "PREFIX": {
-      "description": "set your bot prefix here ex:- '.' "
-     },
-    "AUTHOR": {
-      "description": "set your bot author name here"
-    },
-    "STICKER": {
-      "description": "set your bot sticker package name ex:- 1999namezo"
-    },
-     "id": {
-      "description": "Put your session id here"
-    },     
-     "PM_BLOCKER": {
-      "description": "type True for enable Pm blocker"
-    },
-     "WELCOME": {
-      "description": "Type True for enable welcome message"
-    }     
+  "name": "Itachi_Uchiha-Md",
+  "description": "Multi-Device WhatsApp Bot",
+  "repository": "https://github.com/DeeCeeXxx/Itachi_Uchiha-Md",
+  "scripts": {
+    "postdeploy": "node index.js"
   },
-    "buildpacks": [
-      {
-        "url": "heroku/nodejs"
-      },
-      {
-        "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-      },
-      {
-        "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
-      }
-    ],
-     "formation": {
-          "worker": {
-              "quantity": 1,
-              "size": "eco"
-          }
-     }
+  "env": {
+    "STICKER": {
+      "description": "Set your bot sticker package name",
+      "value": "1999namezo"
+    },
+    "WELCOME": {
+      "description": "Enable welcome message",
+      "value": "True"
+    }
+  },
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "free"
+    }
+  },
+  "addons": []
 }
