--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-  "name": "fenixzo-Bot",
-  "version": "2.0",
-  "description": "WhatsApp Bot Using Nodejs",
-  "main": "index.js",
-  "type": "commonjs",
-  "directories": {
-    "lib": "lib",
-    "database": "database",
-    "session": "session",
-    "media": "media"
-  },
-  "scripts": {
-    "start": "node index.js"
-  },
-  "author": "1999namezo",
-  "license": "MIT",
-  "dependencies": {
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@hapi/boom": "^10.0.1",
-    "@queenanya/baileys": "^6.5.0",
-    "api-dylux": "^1.7.2",
-    "awesome-phonenumber": "^5.9.0",
-    "axios": "^1.4.0",
-    "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
-    "cookie": "^0.5.0",
-    "country-api": "^0.0.3",
-    "country-data": "^0.0.31",
-    "dotenv": "^16.0.0",
-    "file-type": "^16.5.3",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^11.1.1",
-    "google-it": "^1.6.2",
-    "google-tts-api": "^2.0.2",
-    "https": "^1.0.0",
-    "human-readable": "^0.2.1",
-    "javascript-obfuscator": "^4.1.0",
-    "jimp": "^0.16.13",
-    "jsdom": "^22.1.0",
-    "libphonenumber-js": "^1.9.13",
-    "mathjs": "^12.4.1",
-    "moment-timezone": "^0.5.43",
-    "ms": "^2.1.2",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^2.6.11",
-    "node-id3": "^0.2.3",
-    "node-periodic-table": "^0.0.6",
-    "node-webpmux": "^3.1.7",
-    "node-youtube-music": "^0.8.3",
-    "object-query-string": "^1.2.0",
-    "performance-now": "^2.1.0",
-    "pino": "^8.14.1",
-    "ptable": "^0.0.3",
-    "qrcode": "^1.5.3",
-    "qrcode-reader": "^1.0.4",
-    "qrcode-terminal": "^0.12.0",
-    "request": "^2.88.2",
-    "set-cookie": "^0.0.4",
-    "translate-google-api": "^1.0.4",
-    "weather-js": "^2.0.0",
-    "wikipedia": "^2.1.2",
-    "word-definition": "^2.1.6",
-    "youtube-yts": "^2.0.0",
-    "youtubedl-core": "^4.11.5",
-    "ytdl-core": "^4.11.5"
-  },
-  "packageManager": "yarn@4.1.1"
+    "name": "Itachi_Uchiha-Md",
+    "version": "1.0.0",
+    "description": "Multi-Device Whatsapp Bot By Davi Cyril",
+    "main": "index.js",
+    "type": "commonjs",
+    "directories": {
+        "lib": "lib",
+        "src": "src",
+        "media": "Godfather"
+    },
+    "scripts": {
+        "start": "node index.js"
+    },
+    "author": "David Cyril",
+    "license": "MIT",
+    "dependencies": {
+        "@whiskeysockets/baileys": "^6.7.2",
+        "@adiwajshing/keyed-db": "^0.2.4",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@hapi/boom": "^10.0.1",
+        "anime-wallpaper": "^1.0.2",
+        "api-dylux": "^1.4.4",
+        "aptoide-scraper": "^1.0.1",
+        "awesome-phonenumber": "^5.9.0",
+        "axios": "^1.4.0",
+        "chalk": "^4.1.2",
+        "cheerio": "^1.0.0-rc.12",
+        "cookie": "^0.5.0",
+        "crypto": "^1.0.1",
+        "file-type": "^16.5.3",
+        "fluent-ffmpeg": "^2.1.2",
+        "fluent-ffmpeg-7": "^2.1.5",
+        "form-data": "^4.0.0",
+        "fs-extra": "^11.1.1",
+        "g-i-s": "^2.1.7",
+        "google-tts-api": "^2.0.2",
+        "google-it": "^1.6.2",
+        "human-readable": "^0.2.1",
+        "imgur": "2.3.0",
+        "javascript-obfuscator": "^4.0.0",
+        "jimp": "^0.16.13",
+        "jsdom": "^22.1.0",
+        "lodash": "^4.17.21",
+        "mal-scraper": "^2.11.4",
+        "mathjs": "^11.3.0",
+        "megajs": "^1.1.4",
+        "moment-timezone": "^0.5.43",
+        "node-cron": "^3.0.0",
+        "node-fetch": "^2.6.11",
+        "node-os-utils": "^1.3.7",
+        "node-webpmux": "^3.1.7",
+        "node-id3": "^0.2.3",
+        "node-youtube-music": "^0.8.3",
+        "object-query-string": "^1.2.0",
+        "pastebin-js": "^1.0.6",
+        "performance-now": "^2.1.0",
+        "pino": "^8.14.1",
+        "qrcode": "^1.5.3",
+        "qrcode-reader": "^1.0.4",
+        "qrcode-terminal": "^0.12.0",
+        "readline": "^1.3.0",
+        "request": "^2.88.2",
+        "set-cookie": "^0.0.4",
+        "steno": "^1.0.0",
+        "translate-google-api": "^1.0.4",
+        "@vitalets/google-translate-api": "^9.2.0",
+        "youtube-yts": "^2.0.0",
+        "ytdl-core": "^4.11.5",
+        "youtubedl-core": "^4.11.5",
+        "yt-search": "^2.10.4"
+    }
 }
- 
